Fix formatted names and actions alignment

--- a/src/components/common/Members/styles.module.css
+++ b/src/components/common/Members/styles.module.css
@@ -1,6 +1,7 @@
 .iconButtons {
   display: flex;
   align-items: center;
+  flex-grow: 1;
 }
 
 .iconButton {
